--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -15,7 +15,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Inicio de sesión"
         android:textSize="24sp"
         android:textColor="#FFD700"
         android:layout_marginTop="10dp"
@@ -32,7 +32,7 @@
             android:id="@+id/etUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"
+            android:hint="nombre de usuario"
             android:inputType="text"
             android:textColor="#FFD700"
             android:layout_marginTop="30dp"
@@ -49,7 +49,7 @@
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="contraseña"
             android:inputType="textPassword"
             android:textColor="#FFD700"
             android:textColorHint="@color/white"/>
@@ -60,7 +60,16 @@
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Iniciar sesión"
+        android:backgroundTint="#FFD700"
+        android:textColor="#000000"
+        android:layout_marginBottom="16dp"/>
+    <!-- Login Button -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnRegister"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Crear cuenta"
         android:backgroundTint="#FFD700"
         android:textColor="#000000"
         android:layout_marginBottom="16dp"/>
