--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -25,8 +25,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar Tarjeta"
-        android:backgroundTint="#4CAF50"
-        android:textColor="#FFFFFF"
+        android:backgroundTint="#FFD700"
+        android:textColor="#000000"
+        android:padding="12dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp" />
