--- a/app/src/main/res/layout/popup_add_card.xml
+++ b/app/src/main/res/layout/popup_add_card.xml
@@ -7,13 +7,14 @@
     android:layout_margin="16dp"
     app:cardElevation="8dp"
     app:cardCornerRadius="12dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardBackgroundColor="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="@drawable/fondocontra">
 
         <!-- Campo para el nombre de la aplicación -->
         <com.google.android.material.textfield.TextInputLayout
@@ -108,10 +109,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cancelar"
-                app:cornerRadius="8dp"
-                app:strokeWidth="1dp"
-                app:strokeColor="@color/black"
-                android:textColor="@color/white" />
+                android:backgroundTint="#FFD700"
+                android:textColor="#000000"
+                android:padding="2dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_margin="16dp"/>
 
             <!-- Botón Guardar -->
             <com.google.android.material.button.MaterialButton
@@ -119,9 +123,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Guardar"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/white" />
+                android:backgroundTint="#FFD700"
+                android:textColor="#000000"
+                android:padding="2dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_margin="16dp" />
         </LinearLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
