--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     android:background="@drawable/fondocontra">
 
     <!-- Titulo -->
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="Registrar Usuario"
         android:textSize="24sp"
-        android:textColor="@android:color/white"
+        android:textColor="#FFD700"
         android:layout_marginTop="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -39,7 +40,7 @@
             android:hint="Nombre de Usuario"
             android:inputType="text"
             android:textColor="#FFD700"
-            android:textColorHint="@color/white"
+            android:textColorHint="#d0d3d4"
             android:importantForAccessibility="yes"
             android:contentDescription="Campo de nombre de usuario" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -60,7 +61,7 @@
             android:layout_height="wrap_content"
             android:hint="Correo Electrónico"
             android:textColor="#FFD700"
-            android:textColorHint="@color/white"
+            android:textColorHint="#d0d3d4"
             android:inputType="textEmailAddress"
             android:importantForAccessibility="yes"
             android:contentDescription="Campo de correo electrónico" />
@@ -82,7 +83,7 @@
             android:layout_height="wrap_content"
             android:hint="Contraseña"
             android:textColor="#FFD700"
-            android:textColorHint="@color/white"
+            android:textColorHint="#d0d3d4"
             android:inputType="textPassword"
             android:importantForAccessibility="yes"
             android:contentDescription="Campo de contraseña" />
@@ -107,7 +108,7 @@
             android:importantForAccessibility="yes"
             android:inputType="textPassword"
             android:textColor="#FFD700"
-            android:textColorHint="@color/white" />
+            android:textColorHint="#d0d3d4"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Botón de Registrar -->
