--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -41,17 +41,17 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
-        android:layout_above="@id/btnVolver"
+        android:layout_above="@id/btnLogout"
         android:clipToPadding="false"
         android:paddingBottom="16dp"
         android:scrollbars="vertical" />
 
     <!-- Botón para volver -->
     <Button
-        android:id="@+id/btnVolver"
+        android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Volver"
+        android:text="Cerrar Sesión"
         android:backgroundTint="#FFD700"
         android:textColor="#000000"
         android:padding="12dp"
